--- a/index.html
+++ b/index.html
@@ -80,7 +80,32 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer-cont">
+            <div class="footer-ele">
+                <h2 class="footer-title">Future</h2>
+                <p class="footer-des">There are many variations of passages of Lorem Ipsum available, but the majority
+                    have
+                    suffered alteration in some form, by injected humour, or randomised words</p>
+
+                <h4 class="footer-des">Email : info@gmail.com</h4>
+                <h4 class="footer-des">Phone : 01500 00 00 00</h4>
+
+                <div class="social">
+                    <a href=""><img src="images/icons/fb.png" alt=""></a>
+                    <a href=""><img src="images/icons/twitter.png" alt=""></a>
+                    <a href=""><img src="images/icons/youtube.png" alt=""></a>
+                </div>
+            </div>
+            <div class="footer-ele">
+                <h2 class="footer-title">Subscribe</h2>
+                <form action="">
+                    <input type="email" name="" id="" placeholder="Enter Your Email">
+                    <input type="button" value="Subscribe" class="btn-primary btn-call">
+                </form>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
